--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+// importations externes 
+@import 'bootstrap';
+@import "font-awesome";
+
+
+// importations internes
+// components
+@import "components/navbar"
