--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,18 +1,26 @@
+@import "../config/colors";
+
 .footer {
   background: #F4F4F4;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 600px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
+
+.footer-content {
+  width: 70%;
+  background-color: rgba(0, 0, 255, 0.26);
+}
+
 .footer-links {
   display: flex;
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: $primary-color;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
@@ -23,4 +31,10 @@
 }
 .footer .fa-heart {
   color: #D23333;
+}
+
+.footer-logo {
+  img {
+    height: 100px;
+  }
 }
